--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -28,6 +28,7 @@ tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
 
 cask "1password"
+cask "arc"
 cask "alfred"
 cask "bettertouchtool"
 cask "docker"
