feat: add linear and slack

--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -2,7 +2,6 @@ brew "ruby"
 
 tap "heroku/brew"
 tap "homebrew/bundle"
-tap "homebrew/core"
 tap "mongodb/brew"
 
 brew "awscli"
@@ -35,8 +34,10 @@ cask "docker"
 cask "gather"
 cask "gitkraken"
 cask "iterm2"
+cask "linear-linear"
 cask "microsoft-teams"
 cask "ngrok"
+cask "slack"
 cask "visual-studio-code"
 cask "whatsapp"
 cask "zoom"
