feat: Tidy and add notion

--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -35,6 +35,7 @@ cask "gather"
 cask "gitkraken"
 cask "iterm2"
 cask "linear-linear"
+cask "notion"
 cask "microsoft-teams"
 cask "ngrok"
 cask "slack"
