feat: Add chrome and openjdk

--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -10,6 +10,7 @@ brew "dockutil"
 brew "gh"
 brew "grep"
 brew "jq"
+brew "openjdk"
 brew "pyenv"
 brew "python"
 brew "rbenv"
@@ -28,12 +29,12 @@ tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
 
 cask "1password"
-cask "arc"
 cask "alfred"
 cask "bettertouchtool"
 cask "docker"
 cask "gather"
 cask "gitkraken"
+cask "google-chrome"
 cask "iterm2"
 cask "linear-linear"
 cask "notion"
