feat: Split out mytos init script

--- a/mac-mytos/Brewfile
+++ b/mac-mytos/Brewfile
@@ -28,13 +28,19 @@ tap "homebrew/cask"
 tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
 
+cask "1password"
 cask "alfred"
 cask "bettertouchtool"
 cask "docker"
+cask "gather"
 cask "gitkraken"
 cask "google-chrome"
 cask "iterm2"
+cask "linear-linear"
+cask "notion"
+cask "microsoft-teams"
 cask "ngrok"
 cask "slack"
 cask "visual-studio-code"
 cask "whatsapp"
+cask "zoom"
